# solltun

./: Cargo.toml  ohmytodos.json
src/: functions_lib.rs  lib.rs  main.rs
ui/: app-window.slint  custom-button.slint  global.slint  header-view.slint  launch-view.slint  main-view.slint  main-window.slint  nav-view.slint  nav-window.slint  title-window.slint
