[package]
name = "solltun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.7.2"
ohmydb = "1.2.4"
tokio = { version = "1.40.0", features = ["full"] }
serde = { version = "1.0.180", features = ["derive"] }

[build-dependencies]
slint-build = "1.7.2"
